# IronWill

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start_dev.sh
back_end/: .gitignore  crud.py  database.py  main.py  models.py  schemas.py  security.py
back_end/routers/: auth.py  inventory.py  quests.py  shop.py  skills.py  users.py
core/: settings.py
rpg_engine/: apps.py
theme/static_src/: package-lock.json
