[project]
name = "ironwill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.4.0",
    "asgiref==3.11.1",
    "binaryornot==0.6.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cookiecutter==2.7.1",
    "django==6.0.6",
    "django-htmx==1.27.0",
    "django-ratelimit==4.1.0",
    "django-tailwind==4.4.2",
    "dnspython==2.8.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "pygments==2.20.0",
    "pytailwindcss==0.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "rich==15.0.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "text-unidecode==1.3",
    "tzdata==2026.2",
    "urllib3==2.7.0",
]
